--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        hola estudiantes este es mi sitio web sigueme en twitter en 00 si tienes dudas preguntas
+        hola amigos este es mi sitio web sigueme en twitter en el sitio way si tienes dudas preguntas
     </p>
 </body>
 </html>
